--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tsconfig/svelte": "^2.0.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "sirv-cli": "^1.0.0"
   }
 }
