Adding API call to the server

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
         listen 7006;
         listen [::]:7006;
+        server_name wcag;
 
         location / { 
             autoindex off;
