--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@tsconfig/svelte": "^2.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "method-override": "^3.0.0",
+    "pa11y": "^6.1.0",
     "sirv-cli": "^1.0.0"
   }
 }
